added contact information, and previous school, lualhati bg sidebar

--- a/testform.html
+++ b/testform.html
@@ -41,9 +41,9 @@
 
         <div class="main_content_form">
             <div class="nav form_card">
-                <a href="#" class="active">Welcome</a>
+                <a href="testform.html" class="active">Welcome</a>
                 <a href="#">Applicant</a>
-                <a href="#">Contact Info</a>
+                <a href="contact.html">Contact Info</a>
                 <a href="#">Previous School</a>
                 <a href="#">Confirmation</a>
                 <a href="#">Submit</a>
