fixed sidebar, links

--- a/contact.html
+++ b/contact.html
@@ -18,13 +18,12 @@
             <li><a href="#">Assessment Dates</a></li>
             <li><a href="#">Admissions</a></li>
         </ul>
-        <img src="materials/lualhati.png" alt="Lualhati" class="sidebar-photo">
     </div>
 
     <div class="main_content_form">
         <div class="nav form_card">
-            <a href="#">Welcome</a>
-            <a href="testform.html">Applicant</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="applicant.html">Applicant</a>
             <a href="contact.html" class="active">Contact Info</a>
             <a href="previous-school.html">Previous School</a>
             <a href="#">Confirmation</a>
@@ -85,7 +84,7 @@
                 <div id="perma-address-section" style="display: none;">
                     <div class="mb-3">
                         <label for="permanent-region" class="form-label">Permanent Address - Region *</label>
-                        <select class="form-control" id="permanent-region">
+                        <select class="form-control" id="permanent-region" required>
                             <option value="" disabled selected>Select your region</option>
                             <option value="NCR">National Capital Region (NCR)</option>
                             <option value="CAR">Cordillera Administrative Region (CAR)</option>
