fixed broken links

--- a/applicant.html
+++ b/applicant.html
@@ -32,7 +32,7 @@
         <div class="nav nav_card">
             <a href="welcome.html">Welcome</a>
             <a href="#" class="active">Applicant</a>
-            <a href="#">Contact Info</a>
+            <a href="">Contact Info</a>
             <a href="#">Previous School</a>
             <a href="#">Confirmation</a>
             <a href="#">Submit</a>
@@ -229,8 +229,8 @@
 
             <footer>
                 <div class="btnfooter d-flex justify-content-between">
-                    <button class="nextbtn" type="button"><a href="applicant.html">Next</a></button>
-                    <button class="clsbtn bg-primary" type="button"><a href="index.html">Cancel</a></button>
+                    <button class="nextbtn" type="button"><a href="contact.html">Next</a></button>
+                    <button class="clsbtn bg-primary" type="button" ><a href="index.html">Cancel</a></button>
                 </div>
             </footer>
         </div>
