--- a/previous-school.html
+++ b/previous-school.html
@@ -26,12 +26,11 @@
                 <li><a href="#">Assessment Dates</a></li>
                 <li><a href="#">Admissions</a></li>
             </ul>
-            <img src="materials/lualhati.png" alt="Lualhati" class="sidebar-photo">
 
         </div>
 
         <div class="main_content_form">
-            <div class="nav form_card">
+            <div class="nav nav">
                 <a href="#">Welcome</a>
                 <a href="testform.html">Applicant</a>
                 <a href="contact.html">Contact Info</a>
@@ -99,12 +98,14 @@
                         <input type="file" class="form-control" id="transcript" required>
                     </div>
 
-                    <div class="mb-3">
-                        <button type="button" class="btn btn-secondary" id="back-btn">Back</button>
-                        <button type="button" class="btn btn-primary" id="next-btn">Next</button>
-                    </div>
                 </form>
             </div>
+            <footer>
+                <div class="btnfooter d-flex justify-content-between">
+                    <button class="nextbtn" type="button"><a href="contact.html">Next</a></button>
+                    <button class="clsbtn bg-primary" type="button"><a href="index.html">Cancel</a></button>
+                </div>
+            </footer>
         </div>
 
         <script>
