New Applicant and Index (Final)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
                 <li><a href="#" data-bs-toggle="modal" data-bs-target="#coursesModal">Courses</a></li>
                 <li><a href="#" data-bs-toggle="modal" data-bs-target="#assessModal">Assessment Dates</a></li>
-                <li><a href="#">Admissions</a></li>
+                <li><a href="https://www.ue.edu.ph/mla/about-admission/">Admissions</a></li>
             </ul>
         </div>
 
