--- a/applicant.html
+++ b/applicant.html
@@ -112,7 +112,7 @@
                 <div class="mb-3">
                     <label for="citizenship" class="form-label">Citizenship *</label>
                     <select class="form-select" id="citizenship">
-                        <option value="select" selected>Select Citizenship</option>
+                        <option value="select" selected hidden>Select Citizenship</option>
                         <option value="filipino">Filipino</option>
                         <option value="american">American</option>
                         <option value="canadian">Canadian</option>
@@ -131,7 +131,7 @@
                 <div class="mb-3">
                     <label for="gender" class="form-label">Sex/Gender *</label>
                     <select class="form-select" id="gender">
-                        <option value="select" selected>Select Gender</option>
+                        <option value="select" selected hidden>Select Gender</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                         <option value="others">Others</option>
@@ -142,7 +142,7 @@
                 <div class="mb-3">
                     <label for="religion" class="form-label">Religion</label>
                     <select class="form-select" id="religion">
-                        <option value="select" selected>Select Religion</option>
+                        <option value="select" selected hidden>Select Religion</option>
                         <option value="catholic">Catholic</option>
                         <option value="islam">Islam</option>
                         <option value="protestant">Protestant</option>
@@ -161,7 +161,7 @@
                 <div class="mb-3">
                     <label for="semester" class="form-label">Semester *</label>
                     <select class="form-select" id="semester">
-                        <option value="select" selected>Select Semester</option>
+                        <option value="select" selected hidden>Select Semester</option>
                         <option value="1st">1st</option>
                         <option value="2nd">2nd</option>
                     </select>
