--- a/previous-school.html
+++ b/previous-school.html
@@ -201,10 +201,9 @@
             function cancelApplication() {
                 const confirmCancel = confirm("Are you sure you want to cancel the application?");
                 if (confirmCancel) {
-                    window.location.href = "index.html";
+                    window.location.href = "index.html"; // Redirect to a home or starting page
                 }
             }
-
         </script>
     </body>
 </html>
